syntax = "proto3";


package app.improving.eventcontext.event;

import "app/improving/common/common_api.proto";
import "app/improving/organization/api/organization_api.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

enum ApiEventStatus {
    SCHEDULED = 0;
    INPROGRESS = 1;
    PAST = 2;
    CANCELLED = 3;
    DELAYED = 4;
    UNKNOWN = 5;
}
message ApiReservationId {
    string reservation_id = 1 [(kalix.field).entity_key = true];
}

message ApiGetEventById {
    string event_id = 1 [(kalix.field).entity_key = true];
}

message ApiEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiEventMetaInfo meta = 3;
    ApiEventStatus status = 4;
}

message ApiEventInfo {
    string eventName = 1;
    string description = 2;
    string eventURL = 3;
    ApiOrganizationId sponsoringOrg = 4;
    ApiGeoLocation geoLocation = 5;
    ApiReservationId reservation = 6;
    google.protobuf.Timestamp expectedStart = 7;
    google.protobuf.Timestamp expectedEnd = 8;
    bool isPrivate = 9;
}

message ApiEventMetaInfo {
    ApiMemberId scheduledBy = 1;
    google.protobuf.Timestamp scheduledOn = 2;
    ApiMemberId lastModifiedBy = 3;
    google.protobuf.Timestamp lastModifiedOn = 4;
    google.protobuf.Timestamp actualStart = 5;
    google.protobuf.Timestamp actualEnd = 6;
    ApiEventStatus status = 7;
}

message ApiChangeEventInfo {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiMemberId changingMember = 3;
}

message ApiScheduleEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiMemberId schedulingMember = 3;
}

message ApiCancelEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId cancellingMember = 2;
}

message ApiRescheduleEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
    ApiMemberId reschedulingMember = 4;
}

message ApiDelayEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    string reason = 2;
    google.protobuf.Duration expectedDuration = 3;
    ApiMemberId delayingMember = 4;
}

message ApiStartEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId startingMember = 2;
}

message ApiEndEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId endingMember = 2;
}

message ApiAddLiveUpdate {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiLiveUpdate update = 2;
}

message ApiLiveUpdate {
    string from = 1;
    string to = 2;
}